test/regress/coverage-thousand-mark-error.test
; Test amount.cc: thousand-mark period error
; Exercises incorrect thousand-mark detection

2024/01/01 Test
    Expenses:Test    1.000.00 EUR
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Expenses:Test    1.000.00 EUR
                   ^^^^^^^^^^^^
Error: Too many periods in amount
end test
